<resources>
    <string name="app_name">MyClass</string>
    <string name="my_classes">우리 학급</string>
    <string name="edit_class">새 학급 만들기</string>
    <string name="add_class">학급 정보 편집하기</string>
    <string name="action_settings">환경 설정</string>
    <string name="ask_storage_permission">사진파일에 접근하기 위해서 파일 엑세스 권한을 허용하셔야 합니다.</string>
    <string name="denied_permission">권한을 거부하셨습니다.\n다시 설정하시려면 설정 페이지로 가주세요.</string>
    <string name="ask_phone_permission">전화 관련기능 사용을 위해서 다른 앱 위에 그리기 기능 및 전화 걸기 권한을 허용하셔야 합니다.</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="error_read_csv_title">파일 불러오기 실패</string>
    <string name="error_read_csv_message">확장자가 CSV인 파일만 불러올 수 있습니다.</string>
    <string name="grade">학년</string>
    <string name="class_number">반</string>
    <string name="attendance">출석</string>
    <string name="absent_sick">병결</string>
    <string name="absent_early">조퇴</string>
    <string name="absent">결석</string>
    <string name="announcement">발표</string>
    <string name="consulting">상담</string>
    <string name="thumbs_up">칭찬</string>
    <string name="thumbs_down">꾸중</string>
    <string name="enter_description">메모를 입력하세요</string>
    <string name="event">일정</string>
    <string name="todo">할일</string>
    <string name="add_student">학생 추가하기</string>
    <string name="call">전화하기</string>
    <string name="recentEvent">이번주 일정</string>
    <string name="undond_task">해야할 일</string>
    <string name="birth_this_month">이 달의 생일자</string>
    <string name="student_phone_number">학생 전화입니다</string>
    <string name="parent_phone_number">학부모 전화입니다</string>
    <string name="get_student_from_csv_file">CSV 파일로 한번에 학생정보 가져오기</string>
    <string name="saved">저장되었습니다</string>
    <string name="deleted">삭제되었습니다</string>
    <string name="student_list">학생 명단</string>
    <string name="analytics">통계</string>
    <string name="settings">환경설정</string>
    <string name="comment">선생님 말씀</string>
    <string name="changed_data">데이터 변경</string>
    <string name="changed_data_sub">변경사항이 있습니다. 저장하시겠습니까?</string>
    <string name="ask_delete">삭제</string>
    <string name="ask_delete_sub">정말 삭제 하시겠습니까?</string>
    <string name="done">완료</string>
    <string name="save">저장하기</string>
    <string name="untitled">내용 없음</string>
    <string name="none">없음</string>
    <string name="undone">완료해제</string>
</resources>
