<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/root"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/absentButton"
            android:orientation="horizontal"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/ripple_button"
            android:minHeight="50dp"
            android:clickable="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_color="@color/cardview_shadow_start_color"
                app:civ_border_width="0dp"
                android:src="@drawable/ic_home_black_48dp"
                android:padding="15dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/absent"
                    style="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sickButton"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/ripple_button"
            android:minHeight="50dp"
            android:clickable="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_color="@color/cardview_shadow_start_color"
                app:civ_border_width="0dp"
                android:src="@drawable/ic_local_hotel_black_48dp"
                android:padding="15dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/absent_sick"
                    style="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/earlyButton"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/ripple_button"
            android:minHeight="50dp"
            android:clickable="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_color="@color/cardview_shadow_start_color"
                app:civ_border_width="0dp"
                android:src="@drawable/ic_hourglass_empty_black_48dp"
                android:padding="15dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/absent_early"
                    style="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/announcementButton"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/ripple_button"
            android:minHeight="50dp"
            android:clickable="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_color="@color/cardview_shadow_start_color"
                app:civ_border_width="0dp"
                android:src="@drawable/ic_pan_tool_black_48dp"
                android:padding="15dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/announcement"
                    style="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/consultingButton"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/ripple_button"
            android:minHeight="50dp"
            android:clickable="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_color="@color/cardview_shadow_start_color"
                app:civ_border_width="0dp"
                android:src="@drawable/ic_supervisor_account_black_48dp"
                android:padding="15dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consulting"
                    style="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/thumbsUpButton"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/ripple_button"
            android:minHeight="50dp"
            android:clickable="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_color="@color/cardview_shadow_start_color"
                app:civ_border_width="0dp"
                android:src="@drawable/ic_thumb_up_black_48dp"
                android:padding="15dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thumbs_up"
                    style="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thumbsDownButton"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/ripple_button"
            android:minHeight="50dp"
            android:clickable="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_color="@color/cardview_shadow_start_color"
                app:civ_border_width="0dp"
                android:src="@drawable/ic_thumb_down_black_48dp"
                android:padding="15dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thumbs_down"
                    style="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
