<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/classImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/birthLayout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_alpha"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:elevation="2dp">

                <ImageView
                    android:id="@+id/birthButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:tint="@color/primary"
                    android:padding="10dp"
                    android:src="@drawable/ic_cake_black_48dp"
                    android:background="@drawable/ripple_circle_button"
                    android:scaleType="centerInside"/>

                <TextView
                    android:id="@+id/birthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/birth_this_month"
                    android:textColor="@color/primary_text" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/white">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:tint="@color/primary"
                        android:src="@drawable/ic_date_range_black_48dp"
                        android:scaleType="centerInside"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/recentEvent"
                        android:textColor="@color/primary_text" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/thisWeekEventListView"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/gainsboro"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:tint="@color/primary"
                        android:src="@drawable/ic_assignment_turned_in_black_48dp"
                        android:scaleType="centerInside"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/undond_task"
                        android:textColor="@color/primary_text" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/undoneTodoListView"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>