<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="72dp"
                android:background="@color/disable_text"/>

            <LinearLayout
                android:id="@+id/itemButton"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@drawable/ripple_button"
                android:padding="10dp"
                android:minHeight="72dp"
                android:clickable="true">

                <ImageView
                    android:id="@+id/studentImage"
                    android:transitionName="studentImage"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/default_profile_circle" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Title"
                        android:id="@+id/nameText"
                        style="@style/Base.TextAppearance.AppCompat.Title" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/expandableMenuLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/announcementButton"
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/ripple_button"
                    android:minHeight="50dp"
                    android:clickable="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:civ_border_color="@color/cardview_shadow_start_color"
                        app:civ_border_width="0dp"
                        android:src="@drawable/ic_pan_tool_black_48dp"
                        android:padding="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/announcement"
                        android:textColor="@color/primary_text"
                        style="@style/Base.TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/thumbsUpButton"
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:background="@drawable/ripple_button"
                    android:minHeight="50dp"
                    android:clickable="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:civ_border_color="@color/cardview_shadow_start_color"
                        app:civ_border_width="0dp"
                        android:src="@drawable/ic_thumb_up_black_48dp"
                        android:padding="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thumbs_up"
                        android:textColor="@color/primary_text"
                        style="@style/Base.TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/thumbsDownButton"
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:background="@drawable/ripple_button"
                    android:minHeight="50dp"
                    android:clickable="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:civ_border_color="@color/cardview_shadow_start_color"
                        app:civ_border_width="0dp"
                        android:src="@drawable/ic_thumb_down_black_48dp"
                        android:padding="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thumbs_down"
                        android:textColor="@color/primary_text"
                        style="@style/Base.TextAppearance.AppCompat.Medium" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</layout>